--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,14 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6ecee1">  <td>24/06/01 15:39:51</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;MissPuchTC.close()[pri:0, instance:Testcases.MissPuchTC@523424b5]">&lt;&lt;close</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@913746983</td>   <td></td> </tr>
-<tr bgcolor="64a76e">  <td>24/06/01 15:38:51</td>   <td>-59537</td> <td>&nbsp;</td><td title="&gt;&gt;CommonFunctions.main()[pri:0, instance:Testcases.MissPuchTC@523424b5]">&gt;&gt;main</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@913746983</td>   <td></td> </tr>
-<tr bgcolor="6ecee1">  <td>24/06/01 15:39:51</td>   <td>179</td> <td title="&lt;&lt;MissPuchTC.reportflush()[pri:0, instance:Testcases.MissPuchTC@523424b5]">&lt;&lt;reportflush</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@913746983</td>   <td></td> </tr>
-<tr bgcolor="6ecee1">  <td>24/06/01 15:38:58</td>   <td>-53223</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MissPuchTC.eventlist()[pri:1, instance:Testcases.MissPuchTC@523424b5]">eventlist</td> 
-  <td>main@913746983</td>   <td></td> </tr>
-<tr bgcolor="6ecee1">  <td>24/06/01 15:38:51</td>   <td>-60093</td> <td title="&gt;&gt;MissPuchTC.report()[pri:0, instance:Testcases.MissPuchTC@523424b5]">&gt;&gt;report</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@913746983</td>   <td></td> </tr>
+<tr bgcolor="748470">  <td>24/06/19 12:53:32</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;CommonFunctions.main()[pri:0, instance:Testcases.OverTimeTC@4a067c25]">&gt;&gt;main</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@679449777</td>   <td></td> </tr>
+<tr bgcolor="6b83a4">  <td>24/06/19 12:54:12</td>   <td>40821</td> <td>&nbsp;</td><td title="&lt;&lt;OverTimeTC.close()[pri:0, instance:Testcases.OverTimeTC@4a067c25]">&lt;&lt;close</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@679449777</td>   <td></td> </tr>
+<tr bgcolor="6b83a4">  <td>24/06/19 12:53:31</td>   <td>-652</td> <td title="&gt;&gt;OverTimeTC.report()[pri:0, instance:Testcases.OverTimeTC@4a067c25]">&gt;&gt;report</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@679449777</td>   <td></td> </tr>
+<tr bgcolor="6b83a4">  <td>24/06/19 12:54:13</td>   <td>40971</td> <td title="&lt;&lt;OverTimeTC.reportflush()[pri:0, instance:Testcases.OverTimeTC@4a067c25]">&lt;&lt;reportflush</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@679449777</td>   <td></td> </tr>
+<tr bgcolor="6b83a4">  <td>24/06/19 12:53:41</td>   <td>9516</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OverTimeTC.eventlist()[pri:1, instance:Testcases.OverTimeTC@4a067c25]">eventlist</td> 
+  <td>main@679449777</td>   <td></td> </tr>
 </table>
