--- a/Reports/Mispunch POlicy.html
+++ b/Reports/Mispunch POlicy.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary"></span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Jun 1, 2024 03:38:51 pm</span></a>
+<a href="#"><span class="badge badge-primary">Jun 19, 2024 12:53:31 pm</span></a>
 </li>
 </ul>
 </div>
@@ -79,9 +79,9 @@
           tag=""
           device="">
           <div class="test-detail">
-            <p class="name">Testcase for MIssPuchPolicy Page </p>
+            <p class="name">Testcase for OverTimePolicy Page </p>
             <p class="text-sm">
-              <span>3:38:58 pm</span> / <span>00:00:52:105</span>
+              <span>12:53:41 pm</span> / <span>00:00:31:278</span>
               <span class="badge fail-bg log float-right">Fail</span>
             </p>
           </div>
@@ -89,10 +89,10 @@
 <div class="detail-head">
 <div class="p-v-10">
 <div class="info">
-<h5 class="test-status text-fail">Testcase for MIssPuchPolicy Page </h5>
-<span class='badge badge-success'>06.01.2024 3:38:58 pm</span>
-<span class='badge badge-danger'>06.01.2024 3:39:50 pm</span>
-<span class='badge badge-default'>00:00:52:105</span>
+<h5 class="test-status text-fail">Testcase for OverTimePolicy Page </h5>
+<span class='badge badge-success'>06.19.2024 12:53:41 pm</span>
+<span class='badge badge-danger'>06.19.2024 12:54:12 pm</span>
+<span class='badge badge-default'>00:00:31:278</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -103,245 +103,315 @@
   <thead><tr><th class="status-col">Status</th><th class="timestamp-col">Timestamp</th><th class="details-col">Details</th></tr></thead>
   <tbody>
       <tr class="event-row">
-        <td><span class="badge log info-bg">Info</span></td>
-        <td>3:38:58 pm</td>
-        <td>
-          <b><font color = 'purple'>Test case-1 Verify the country page is displayed </b>
-        </td>
-      </tr>
-      <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>3:39:00 pm</td>
+        <td>12:53:42 pm</td>
         <td>
           Settings Menu clicked
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>3:39:00 pm</td>
+        <td>12:53:43 pm</td>
         <td>
           workpolicy Menu Clicked
         </td>
       </tr>
       <tr class="event-row">
-        <td><span class="badge log fail-bg">Fail</span></td>
-        <td>3:39:00 pm</td>
+        <td><span class="badge log pass-bg">Pass</span></td>
+        <td>12:53:43 pm</td>
         <td>
-          <font color='red'>MissPuchPOlicy page is not displayed</font>
+          WorkPolicy page is displayed
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>12:53:43 pm</td>
+        <td>
+          <b><font color = 'purple'>Test case-1 Check the Create short Time Policy page is displayed </b>
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log pass-bg">Pass</span></td>
+        <td>12:53:43 pm</td>
+        <td>
+          Create Work pollicy option is clicked Suceesfully
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log pass-bg">Pass</span></td>
+        <td>12:53:43 pm</td>
+        <td>
+          Over Time  pollicy option is clicked Suceesfully
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log pass-bg">Pass</span></td>
+        <td>12:53:43 pm</td>
+        <td>
+          Over Time Policy page is displayed
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log pass-bg">Pass</span></td>
+        <td>12:53:46 pm</td>
+        <td>
+          Send the Over Time Policy name Successfully
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log pass-bg">Pass</span></td>
+        <td>12:53:47 pm</td>
+        <td>
+          Send the time extra work Successfully
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log pass-bg">Pass</span></td>
+        <td>12:53:48 pm</td>
+        <td>
+          Send the amount for extra work Successfully
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log pass-bg">Pass</span></td>
+        <td>12:53:49 pm</td>
+        <td>
+          Save OverTime Policy Successfully
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>12:53:49 pm</td>
+        <td>
+          <b><font color = 'purple'>Test case-2 Check the Assign Over Time Policy page is displayed </b>
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log pass-bg">Pass</span></td>
+        <td>12:53:49 pm</td>
+        <td>
+          Checkbox clicked successfully
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log pass-bg">Pass</span></td>
+        <td>12:53:50 pm</td>
+        <td>
+          Save & Continue Button clicked Successfully
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>12:53:50 pm</td>
+        <td>
+          <b><font color = 'purple'>Test case-3 Verify the Custom Rate Functionality </b>
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log pass-bg">Pass</span></td>
+        <td>12:53:52 pm</td>
+        <td>
+          Create Work pollicy option is clicked Suceesfully
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log pass-bg">Pass</span></td>
+        <td>12:53:52 pm</td>
+        <td>
+          Over Time  pollicy option is clicked Suceesfully
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log pass-bg">Pass</span></td>
+        <td>12:53:52 pm</td>
+        <td>
+          Send the Over Time Policy name Successfully
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log pass-bg">Pass</span></td>
+        <td>12:53:52 pm</td>
+        <td>
+          Send the amount for extra work Successfully
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log pass-bg">Pass</span></td>
+        <td>12:53:53 pm</td>
+        <td>
+          Clicked the Custom Rate Option Successfully
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log pass-bg">Pass</span></td>
+        <td>12:53:54 pm</td>
+        <td>
+          Send the time extra work Successfully
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log pass-bg">Pass</span></td>
+        <td>12:53:54 pm</td>
+        <td>
+          Send the time extra work Successfully
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log pass-bg">Pass</span></td>
+        <td>12:53:54 pm</td>
+        <td>
+          Send the Multiplayer amount for extra work Successfully
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log pass-bg">Pass</span></td>
+        <td>12:53:54 pm</td>
+        <td>
+          Save OverTime Policy Successfully
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log pass-bg">Pass</span></td>
+        <td>12:53:55 pm</td>
+        <td>
+          Checkbox clicked successfully
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log pass-bg">Pass</span></td>
+        <td>12:53:55 pm</td>
+        <td>
+          Save & Continue BUtton clicked Successfully
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>12:53:55 pm</td>
+        <td>
+          <b><font color = 'purple'>Test case-4 Verify the Complimentary Off Functionality </b>
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log pass-bg">Pass</span></td>
+        <td>12:53:57 pm</td>
+        <td>
+          Create Work pollicy option is clicked Suceesfully
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log pass-bg">Pass</span></td>
+        <td>12:53:57 pm</td>
+        <td>
+          Over Time  pollicy option is clicked Suceesfully
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log pass-bg">Pass</span></td>
+        <td>12:53:57 pm</td>
+        <td>
+          Send the Over Time Policy name Successfully
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log pass-bg">Pass</span></td>
+        <td>12:53:57 pm</td>
+        <td>
+          Send the amount for extra work Successfully
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log pass-bg">Pass</span></td>
+        <td>12:53:58 pm</td>
+        <td>
+          Clicked the Complimentary off Option Clicked Successfully
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log pass-bg">Pass</span></td>
+        <td>12:53:59 pm</td>
+        <td>
+          Choose time  Successfully
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log pass-bg">Pass</span></td>
+        <td>12:53:59 pm</td>
+        <td>
+          Save OverTime Policy Successfully
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log pass-bg">Pass</span></td>
+        <td>12:53:59 pm</td>
+        <td>
+          Checkbox clicked successfully
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log pass-bg">Pass</span></td>
+        <td>12:53:59 pm</td>
+        <td>
+          Save & Continue BUtton clicked Successfully
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>12:53:59 pm</td>
+        <td>
+          <b><font color = 'purple'>Test case-3 Verify the Update Over Time Policy Functionality</b>
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log pass-bg">Pass</span></td>
+        <td>12:54:00 pm</td>
+        <td>
+           Serching Workpolicy successfully
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log pass-bg">Pass</span></td>
+        <td>12:54:02 pm</td>
+        <td>
+          Changed the  TimeInTimeOut Policy name Successfully
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log fail-bg">Fail</span></td>
+        <td>12:54:09 pm</td>
+        <td>
+          <font color='red'> Update Time In Time Out Policy failed</font>
     <div class="row mb-3"><div class="col-md-3">
-<img data-featherlight='/home/monisha/Downloads/eclipse-java-2024-03-R-linux-gtk-x86_64/eclipse/WorkPolicy/screenshots/null_20240601153900.png' src="/home/monisha/Downloads/eclipse-java-2024-03-R-linux-gtk-x86_64/eclipse/WorkPolicy/screenshots/null_20240601153900.png">
+<img data-featherlight='/home/monisha/Downloads/eclipse-java-2024-03-R-linux-gtk-x86_64/eclipse/WorkPolicy/screenshots/null_20240619125409.png' src="/home/monisha/Downloads/eclipse-java-2024-03-R-linux-gtk-x86_64/eclipse/WorkPolicy/screenshots/null_20240619125409.png">
     
     </div></div>
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>3:39:00 pm</td>
+        <td>12:54:09 pm</td>
         <td>
-          <b><font color = 'purple'>Test case-2 Check the Create Workpolicy page is displayed </b>
+          <b><font color = 'purple'>Test case-4 check the delete button is displyed </b>
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>3:39:01 pm</td>
+        <td>12:54:10 pm</td>
         <td>
-          Creatework policy option clicked
+          Delete button clicked Successfully.
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>3:39:05 pm</td>
+        <td>12:54:11 pm</td>
         <td>
-          Creatework policy option clicked
-        </td>
-      </tr>
-      <tr class="event-row">
-        <td><span class="badge log info-bg">Info</span></td>
-        <td>3:39:06 pm</td>
-        <td>
-          <b><font color = 'purple'>Test case-3 Check the Create Misspuch  page is displayed </b>
+          No button clicked Successfully.
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>3:39:06 pm</td>
+        <td>12:54:12 pm</td>
         <td>
-          Miss Puch Policy  window is displayed.The heading is :Miss Punch Policy
-        </td>
-      </tr>
-      <tr class="event-row">
-        <td><span class="badge log pass-bg">Pass</span></td>
-        <td>3:39:06 pm</td>
-        <td>
-          Policyname entred successfully
-        </td>
-      </tr>
-      <tr class="event-row">
-        <td><span class="badge log pass-bg">Pass</span></td>
-        <td>3:39:06 pm</td>
-        <td>
-          Checkbox clicked successfully
-        </td>
-      </tr>
-      <tr class="event-row">
-        <td><span class="badge log pass-bg">Pass</span></td>
-        <td>3:39:07 pm</td>
-        <td>
-          MissPuch value entred successfully
-        </td>
-      </tr>
-      <tr class="event-row">
-        <td><span class="badge log pass-bg">Pass</span></td>
-        <td>3:39:09 pm</td>
-        <td>
-          MissPuch value entred successfully
-        </td>
-      </tr>
-      <tr class="event-row">
-        <td><span class="badge log pass-bg">Pass</span></td>
-        <td>3:39:10 pm</td>
-        <td>
-          Deduction DroprDown clicked successfully
-        </td>
-      </tr>
-      <tr class="event-row">
-        <td><span class="badge log pass-bg">Pass</span></td>
-        <td>3:39:10 pm</td>
-        <td>
-          Miss punch occur time  DroprDown clicked successfully
-        </td>
-      </tr>
-      <tr class="event-row">
-        <td><span class="badge log pass-bg">Pass</span></td>
-        <td>3:39:11 pm</td>
-        <td>
-          Deduction Type Drop Down clicked successfully
-        </td>
-      </tr>
-      <tr class="event-row">
-        <td><span class="badge log pass-bg">Pass</span></td>
-        <td>3:39:14 pm</td>
-        <td>
-          Deduction From Drop Down clicked successfully
-        </td>
-      </tr>
-      <tr class="event-row">
-        <td><span class="badge log pass-bg">Pass</span></td>
-        <td>3:39:16 pm</td>
-        <td>
-          Days Drop Down clicked successfully
-        </td>
-      </tr>
-      <tr class="event-row">
-        <td><span class="badge log pass-bg">Pass</span></td>
-        <td>3:39:18 pm</td>
-        <td>
-          Save & Continue button clicked successfully
-        </td>
-      </tr>
-      <tr class="event-row">
-        <td><span class="badge log info-bg">Info</span></td>
-        <td>3:39:20 pm</td>
-        <td>
-          <b><font color = 'purple'>Test case-4 Check the Assign Policy  page is displayed </b>
-        </td>
-      </tr>
-      <tr class="event-row">
-        <td><span class="badge log pass-bg">Pass</span></td>
-        <td>3:39:20 pm</td>
-        <td>
-          Assign Policy  window is displayed.The heading is :Assign Policy
-        </td>
-      </tr>
-      <tr class="event-row">
-        <td><span class="badge log pass-bg">Pass</span></td>
-        <td>3:39:20 pm</td>
-        <td>
-          Checkbox clicked successfully
-        </td>
-      </tr>
-      <tr class="event-row">
-        <td><span class="badge log pass-bg">Pass</span></td>
-        <td>3:39:22 pm</td>
-        <td>
-          Remove All Option clicked successfully
-        </td>
-      </tr>
-      <tr class="event-row">
-        <td><span class="badge log pass-bg">Pass</span></td>
-        <td>3:39:26 pm</td>
-        <td>
-          Send the value successfully
-        </td>
-      </tr>
-      <tr class="event-row">
-        <td><span class="badge log pass-bg">Pass</span></td>
-        <td>3:39:27 pm</td>
-        <td>
-          Checkbox clicked successfully
-        </td>
-      </tr>
-      <tr class="event-row">
-        <td><span class="badge log pass-bg">Pass</span></td>
-        <td>3:39:29 pm</td>
-        <td>
-          Department Option clicked successfully
-        </td>
-      </tr>
-      <tr class="event-row">
-        <td><span class="badge log pass-bg">Pass</span></td>
-        <td>3:39:29 pm</td>
-        <td>
-           Send the department value successfully
-        </td>
-      </tr>
-      <tr class="event-row">
-        <td><span class="badge log pass-bg">Pass</span></td>
-        <td>3:39:30 pm</td>
-        <td>
-          Checkbox clicked successfully
-        </td>
-      </tr>
-      <tr class="event-row">
-        <td><span class="badge log pass-bg">Pass</span></td>
-        <td>3:39:33 pm</td>
-        <td>
-          Checkbox clicked successfully
-        </td>
-      </tr>
-      <tr class="event-row">
-        <td><span class="badge log pass-bg">Pass</span></td>
-        <td>3:39:34 pm</td>
-        <td>
-          saved  successfully
-        </td>
-      </tr>
-      <tr class="event-row">
-        <td><span class="badge log info-bg">Info</span></td>
-        <td>3:39:38 pm</td>
-        <td>
-          <b><font color = 'purple'>Test case-5  Verify the Update Miss Puch Policy functionality  </b>
-        </td>
-      </tr>
-      <tr class="event-row">
-        <td><span class="badge log pass-bg">Pass</span></td>
-        <td>3:39:43 pm</td>
-        <td>
-          Search the policy  successfully
-        </td>
-      </tr>
-      <tr class="event-row">
-        <td><span class="badge log pass-bg">Pass</span></td>
-        <td>3:39:49 pm</td>
-        <td>
-          Update the policy  successfully
-        </td>
-      </tr>
-      <tr class="event-row">
-        <td><span class="badge log info-bg">Info</span></td>
-        <td>3:39:50 pm</td>
-        <td>
-          <b><font color = 'purple'>Test case-6  Verify the Delete  functionality  Miss Puch Policy </b>
+          Confrim button clicked Successfully.
         </td>
       </tr>
   </tbody>
@@ -363,13 +433,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Jun 1, 2024 03:38:51 pm</h3>
+<h3>Jun 19, 2024 12:53:31 pm</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Jun 1, 2024 03:39:51 pm</h3>
+<h3>Jun 19, 2024 12:54:13 pm</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -420,7 +490,7 @@
 </div>
 </div>
 <div class="card-footer">
-<div><small data-tooltip='79%'><b>27</b> events passed</small></div>
+<div><small data-tooltip='84%'><b>37</b> events passed</small></div>
 <div>
 <small data-tooltip='2%'><b>1</b> events failed,
 <b data-tooltip='%'>6</b> others
@@ -439,7 +509,7 @@
 </div></div>
 <script>
 var timeline = {
-"Testcase for MIssPuchPolicy Page ":52.105
+"Testcase for OverTimePolicy Page ":31.278
 };
 </script>
 <div class="row">
@@ -487,7 +557,7 @@ warningGrandChild: 0,
 skipGrandChild: 0,
 infoGrandChild: 0,
 eventsCount: 5,
-passEvents: 27,
+passEvents: 37,
 failEvents: 1,
 warningEvents: 0,
 skipEvents: 0,
